@@ -1,3 +1,7 @@
+2017-01-09  Roberto Reale  <roberto.reale82@gmail.com>
+
+	* pyTrivialCache.py: Improved.
+
 2015-01-29  Roberto Reale  <roberto.reale82@gmail.com>
 
 	* First release.
